fixed gaps for catalog items

--- a/src/styles/blocks/card.scss
+++ b/src/styles/blocks/card.scss
@@ -7,6 +7,13 @@
   border-radius: 5px;
   padding: 32px 16px 16px;
 
+  &--position {
+    margin-bottom: 46px;
+    &:not(:nth-child(4n)) {
+      margin-right: 48px;
+    }
+  }
+
   &__description {
     margin-top: 40px;
   }
@@ -14,11 +21,11 @@
   &__image {
     display: flex;
     justify-content: center;
+  }
 
-    .image__imac {
-      height: 134px;
-      width: 160px;
-    }
+  &__logo {
+    height: 134px;
+    width: 160px;
   }
   
   &__name {
