--- a/src/styles/blocks/catalog.scss
+++ b/src/styles/blocks/catalog.scss
@@ -1,19 +1,13 @@
 .catalog {
   display: flex;
+  justify-content: center;
 
   &__zone {
     margin: 50px 40px;
     display: flex;
     flex-wrap: wrap;
-    justify-content: center;
-  }
-  
-  &__row {
-    display: flex;
     flex-direction: row;
-    margin-bottom: 46px;
     min-width: $card-width * 4 + 144px;
     max-width: $card-width * 4 + 144px;
-    justify-content: space-between;
   }
 }
