--- a/src/styles/blocks/nav.scss
+++ b/src/styles/blocks/nav.scss
@@ -12,28 +12,33 @@
   
   &__list-a {
     height: 60px;
-    color: #060b35;
+    display: flex;
+    color: $main-color;
+    flex-direction: column;
+    justify-content: center;
     text-decoration: none;
     text-transform: uppercase;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
 
-    &::after,
-    &::before {
-      content: "";
-      height: 4px;
-    }
-    
-    &:hover,
-    &.is-active {
+    &:hover {
       color: $button-color;
     }
-    
-    &.is-active::after {
-      width: 100%;
-      border-radius: 4px;
-      background-color: $button-color;
-    }
+  }
+}
+
+.is-active {
+  color: $button-color;
+  justify-content: space-between;
+
+  &::before {
+    content: "";
+    height: 4px;
+  }
+
+  &::after {
+    content: "";
+    height: 4px;
+    width: 100%;
+    border-radius: 4px;
+    background-color: $button-color;
   }
 }
